--- a/templates/_base.html
+++ b/templates/_base.html
@@ -7,7 +7,7 @@
         <nav>
             <a href="index.html"><button>Home</button></a>
             <a href="create.html"><button>Create Account</button></a>
-            <a href="login.html"><button>Login</button></a>
+            {% if user %}<a href="logout.html"><button>Log Out</button></a>{% else %}<a href="login.html"><button>Login</button></a>{% endif %}
             <a href="game.html"><button>Play Game</button></a>
             <a href="marketplace.html"><button>Marketplace</button></a>
             <a href="upload.html"><button>Image Upload</button></a>
