--- a/templates/marketplace.html
+++ b/templates/marketplace.html
@@ -5,9 +5,9 @@
 
         <p>Search for a design made by another user!</p>
         
-        <br><br>
+        <br>
         
-        <h2 id="imagedisplay">All Images</h2>
+        <h2 id="imagedisplay" style = 'text-align:center'>All Images</h2>
         <form onsubmit = "updateSearch();return false">
             <div class = "centered">
             <p id = "inputElement">Search in Global Images:&nbsp;</p><input id="search-bar" type="text" name="search" style="width:50%">
@@ -18,6 +18,7 @@
         <div class = 'mode'>
         <image id = 'mode-changer' name = "Global" src = '/s/Global.png' onclick="switchMode(this.id)" onmouseover = 'iconHover(this.id)' onmouseout="clearIconHover(this.id)">
         <p id = 'mode-info' class = 'mode-info'>View Claimed Images Only</p>
+        <p id = 'clearsearch' name = "vis"  class = 'clear' onmouseover="iconHover(this.id)" onmouseout="clearIconHover(this.id)">&times;</p>
         </div>
         {% endif %}      
         <br>
