added early visit system via /visit url

--- a/templates/game.html
+++ b/templates/game.html
@@ -3,7 +3,7 @@
     </body>
     <body id = "game-body">
     <br><br>
-    <div class = container>
+    <div class = "container">
         <div class = "row">
             <div class = "nav" id = "buildingNav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
