fixed sessions for visit pages

--- a/templates/visit.html
+++ b/templates/visit.html
@@ -4,7 +4,7 @@
     <p>Welcome to the Visit portal!</p>
     <h2>User '{{attemptedVisit}}' not found!</h2>
     <br>
-    <div>
+    <div class="centered">
         <input type='text' id='userSearch'>
         <input type='button' value='Search' onclick='createRedirectURL()'>
     </div>
@@ -50,7 +50,7 @@
     <p>Welcome to the Visit portal!</p>
     <div hidden><h2>User not found!</h2></div>
     <br>
-    <div>
+    <div class="centered">
         <input type='text' id='userSearch'>
         <input type='button' value='Search' onclick='createRedirectURL()'>
     </div>
