--- a/static-files-folder/style.css
+++ b/static-files-folder/style.css
@@ -26,6 +26,41 @@ button:hover{
     color: blue;
 }
 
+.slider-area{
+    cursor: default;
+    display:flex; 
+    justify-content: center;
+    flex-direction: row;
+}
+
+#crop-area{
+    display:none; 
+    justify-content: center;
+    flex-direction: row;
+}
+
+#img-sliders{
+    text-align:center;
+}
+
+#img-cropper{
+    width: 500px;
+    height: 500px;
+    overflow:hidden;   
+    position:relative;
+    margin-left: auto;
+    margin-right:auto;    
+    background-color: black;
+    border-style: solid;
+}
+
+#img-cropper1{
+    position: absolute;
+    top:0px;
+    left:0px;
+}
+
+
 .error{
     color: red;
     font-weight: bold;
